--- a/app/src/main/res/layout/activity_readable_text.xml
+++ b/app/src/main/res/layout/activity_readable_text.xml
@@ -1,36 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
+    <data>
+        <variable
+            name="handlers"
+            type="com.zdominguez.sdksandbox.ReadableTextActivity" />
 
-    <android.support.design.widget.TextInputLayout
-        android:layout_marginTop="16dp"
+    </data>
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <EditText
+        android:layout_height="match_parent">
+
+        <android.support.design.widget.TextInputLayout
+            android:layout_marginTop="16dp"
             android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Background Colour (Hex or ARGB)"
+                android:digits="0123456789ABCDEF"
+                android:inputType="textCapCharacters"
+                android:id="@+id/input_colour"/>
+        </android.support.design.widget.TextInputLayout>
+        <Button
+            android:id="@+id/submit_colour"
+            android:padding="8dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:hint="Background Colour (Hex or ARGB)"
-            android:digits="0123456789ABCDEF"
-            android:inputType="textCapCharacters"
-            android:id="@+id/input_colour"/>
-    </android.support.design.widget.TextInputLayout>
-    <Button
-        android:id="@+id/submit_colour"
-        android:padding="8dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Submit colour"/>
+            android:onClick="@{() -> handlers.submitColour()}"
+            android:text="Submit colour"/>
 
-    <TextView
-        android:layout_marginTop="24dp"
-        android:id="@+id/output"
-        android:textSize="24sp"
-        tools:text="#30000"
-        android:padding="16dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        <TextView
+            android:layout_marginTop="24dp"
+            android:id="@+id/output"
+            android:textSize="24sp"
+            tools:text="#30000"
+            android:padding="16dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
 
-</LinearLayout>
+    </LinearLayout>
+</layout>
